--- a/apollo-client/app1/package.json
+++ b/apollo-client/app1/package.json
@@ -41,8 +41,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "4.9.2",
     "webpack-merge": "5.10.0",
-    "@rspack/core": "0.6.2-canary-796c734-20240418055822",
-    "@rspack/cli": "0.6.2-canary-796c734-20240418055822",
-    "@rspack/dev-server": "0.6.2-canary-796c734-20240418055822"
+    "@rspack/core": "^0.6.2",
+    "@rspack/cli": "^0.6.2",
+    "@rspack/dev-server": "^0.6.2"
   }
 }
