--- a/react-16-17-18-ssr/remote1/package.json
+++ b/react-16-17-18-ssr/remote1/package.json
@@ -5,8 +5,8 @@
     "start": "pnpm build && pnpm serve",
     "serve": "npx serve dist/ -p 3001",
     "build": "pnpm build:client && pnpm build:server",
-    "build:client": "rimraf dist/client && webpack --mode production --config config/webpack.client.js",
-    "build:server": "rimraf dist/server && webpack --mode production --config config/webpack.server.js"
+    "build:client": "rimraf dist/client && rspack --mode production --config config/webpack.client.js",
+    "build:server": "rimraf dist/server && rspack --mode production --config config/webpack.server.js"
   },
   "dependencies": {
     "react": "16.14.0",
@@ -28,6 +28,9 @@
     "rimraf": "3.0.2",
     "webpack": "^5.91.0",
     "webpack-cli": "4.9.2",
-    "webpack-merge": "5.10.0"
+    "webpack-merge": "5.10.0",
+    "@rspack/core": "^0.6.3",
+    "@rspack/cli": "^0.6.3",
+    "@rspack/dev-server": "^0.6.3"
   }
 }
