--- a/react-18-server-2-server/app1/package.json
+++ b/react-18-server-2-server/app1/package.json
@@ -5,8 +5,8 @@
     "start": "pnpm build && pnpm serve",
     "serve": "node dist/server/main.js",
     "build": "pnpm build:server && pnpm build:client",
-    "build:client": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
-    "build:server": "rimraf dist/server && webpack --mode production --progress --config config/webpack.server.js"
+    "build:client": "rimraf dist/client && rspack --config config/webpack.client.js",
+    "build:server": "rimraf dist/server && rspack --config config/webpack.server.js"
   },
   "dependencies": {
     "express": "4.18.2",
@@ -33,6 +33,9 @@
     "rimraf": "3.0.2",
     "webpack": "^5.91.0",
     "webpack-cli": "4.9.2",
-    "webpack-merge": "5.10.0"
+    "webpack-merge": "5.10.0",
+    "@rspack/cli": "^0.6.3",
+    "@rspack/core": "^0.6.3",
+    "@rspack/dev-server": "^0.6.3"
   }
 }
