--- a/typescript-monorepo/app1/package.json
+++ b/typescript-monorepo/app1/package.json
@@ -9,7 +9,7 @@
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "babel-loader": "8.2.5",
-    "typescript-monorepo_app2": "*",
+    "typescript-monorepo_app2": "workspace:*",
     "html-webpack-plugin": "5.6.0",
     "serve": "14.2.1",
     "typescript": "4.3.5",
