--- a/dashboard-admin-react-rspack-material-ui/dashboard-app/Dockerfile.dev
+++ b/dashboard-admin-react-rspack-material-ui/dashboard-app/Dockerfile.dev
@@ -4,8 +4,8 @@ WORKDIR '/app'
 
 COPY package.json .
 
-RUN rm -rf node_modules/ && yarn
+RUN rm -rf node_modules/ && pnpm install
 
 COPY . .
 
-CMD ["yarn", "start"]
+CMD ["pnpm", "run", "start"]
