--- a/remix/package.json
+++ b/remix/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "preinstall": "find . -name \"noexist\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts",
-    "server": "concurrently 'cd ./app1; sleep 1 && yarn run server' 'cd ./app2; yarn run server'",
+    "server": "concurrently 'cd ./app1; sleep 1 && npm run server' 'cd ./app2; npm run server'",
     "start": "pnpm --filter remix-* --parallel start"
   },
   "devDependencies": {
