--- a/nextjs-dynamic-ssr/package.json
+++ b/nextjs-dynamic-ssr/package.json
@@ -8,7 +8,7 @@
     "start": " pnpm --parallel --filter nextjs-dynamic-ssr_* dev",
     "build": "pnpm --parallel --filter nextjs-dynamic-ssr_* build",
     "serve": "pnpm --parallel --filter nextjs-dynamic-ssr_* start",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && wait-on http-get://localhost:3002/ && wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & sleep 2 && wait-on tcp:3001 && wait-on tcp:3002 && wait-on tcp:3000 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "dependencies": {
     "concurrently": "^8.2.2",
